# FunD

./: .gitignore  .gitmessage  CLAUDE.md  README.md  board.md  docker-compose.infra.yml  docker-compose.prod.yml  docker-compose.yml
.claude/plans/: swift-gliding-swan.md
backend/: .env.example  .env.local.example  .env.production.example  Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt
backend/config/: __init__.py  celery.py  settings.py  urls.py
backend/info/: admin.py  api.py  models.py  tasks.py  tests.py  urls.py  views.py
backend/info/fixtures/: initial_funds.json
backend/info/management/commands/: backfill_ohlcv.py  trigger_celery_task.py
backend/info/market_data/: base.py  data_api.py  persistence.py  registry.py  service.py
backend/info/market_data/providers/: akshare_provider.py  eastmoney_nav_provider.py  yfinance_provider.py
backend/info/market_data/tests/: test_eastmoney_nav_provider.py  test_gaps.py  test_persistence.py  test_service.py
backend/info/migrations/: 0001_initial.py  0002_rename_closing_price_funddailydata_close_and_more.py
backend/info/templates/: 404.html
backend/info/templates/info/: detail.html  index.html
backend/info/utils/: keys.py  redis_conn.py
doc/: backend.md  board.md  celery_tasks.md  db_tables.md  deployment.md  django-cmd-bank.md  market_data_layer.md  product_requirements.md  redis_db_design.md  testing_strategy.md
nginx/: nginx.conf.template
scripts/: init-letsencrypt.sh
