[project]
name = "fund"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "django==5.2.5",
    "django-redis",
    "redis==6.0.0",
    "psycopg[binary]==3.2.10",
    "celery==5.5.3",
    "requests",
    "python-dotenv>=1.2.2",
    "yfinance",
    "akshare",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-django",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
pythonpath = ["."]
